--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,10 @@
     </a>
 
     <p class="extra">
+        <a class="link" href="https://github.com/sergiokopplin/indigo">プライバシーポリシーと免責事項</a>
+    </p>
+
+    <p class="extra">
         <a class="link" href="https://github.com/sergiokopplin/indigo">Indigo theme</a>
         by
         <a class="link" href="https://github.com/sergiokopplin/indigo">Kopplin</a>
