リンクの適正化

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
     </a>
 
     <p class="extra">
-        <a class="link" href="https://github.com/sergiokopplin/indigo">プライバシーポリシーと免責事項</a>
+        <a class="link" href="https://webbbbbbb.com/privacypolicy/">プライバシーポリシーと免責事項</a>
     </p>
 
     <p class="extra">
