adsenseのタグ埋めを実施

--- a/_includes/analytics-google.html
+++ b/_includes/analytics-google.html
@@ -1,3 +1,5 @@
+<!-- Google Adsense code-->
+<script data-ad-client="ca-pub-7552726417311774" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.analytics-google }}"></script>
 <script>
