--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -125,7 +125,9 @@ pre
 		width: 88%
 
 .wrapper-normal
-	max-width: 560px
+	max-width: max-content
+	align-content: center
 
 .wrapper-large
-	max-width: 810px
+	max-width: max-content
+	align-content: center
