幅MAXにはしない

--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -125,9 +125,13 @@ pre
 		width: 88%
 
 .wrapper-normal
-	max-width: max-content
+	max-width: 60%
+	padding-inline-start: 20%
+	padding-inline-end: 20%
 	align-content: center
 
 .wrapper-large
-	max-width: max-content
+	max-width: 60%
+	padding-inline-start: 20%
+	padding-inline-end: 20%
 	align-content: center
