--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -125,13 +125,7 @@ pre
 		width: 88%
 
 .wrapper-normal
-	max-width: 60%
-	padding-inline-start: 20%
-	padding-inline-end: 20%
-	align-content: center
+	max-width: 810px
 
 .wrapper-large
-	max-width: 60%
-	padding-inline-start: 20%
-	padding-inline-end: 20%
-	align-content: center
+	max-width: 810px
